<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="net.avantica.whereisthetruck.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_configuration"
        android:name="net.avantica.whereisthetruck.ui.configuration.ConfigurationFragment"
        android:label="@string/configuration"
        tools:layout="@layout/configuration_fragment" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="net.avantica.whereisthetruck.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/profile_fragment" />
</navigation>